クイズボタンの文字を消しました

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
      承認者　中野リーダー、道下先生、多中隊長
      検証　団加入員 -->
     <div id="quiz-container" class="card" style="display: none;">
-        <h2 id="question">地図上で磁北は真北からどの方角に何度ズレているか？</h2>
+        <h2 id="question"></h2>
         <div class="choice">
-            <button class="quiz-button">西</button>
-            <button class="quiz-button">東°</button>
-            <button class="quiz-button">東</button>
-            <button class="quiz-button">西°</button>
+            <button class="quiz-button"></button>
+            <button class="quiz-button"></button>
+            <button class="quiz-button"></button>
+            <button class="quiz-button"></button>
         </div>
         <div id="quizbar">
             <form>
