間違えた問題の表示

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
         </div>
     
     </div>
+
+    <div id="result-area" style="display:none;">
+  <h2 id="result-score"></h2>
+  <h2>解説</h2>
+  <div id="explanations"></div>
+
+  <button onclick="location.reload()">最初からやり直す</button>
+</div>
+
    
     <script src="main.js"></script>
 </body>
