無限に解き直し可能に

--- a/index.html
+++ b/index.html
@@ -44,13 +44,16 @@
     
     </div>
 
+   
     <div id="result-area" style="display:none;">
-  <h2 id="result-score"></h2>
-  <h2>解説</h2>
-  <div id="explanations"></div>
+        <h2 id="result-score"></h2>
 
-  <button onclick="location.reload()">最初からやり直す</button>
-</div>
+        <h2>解説</h2>
+        <div id="explanations"></div>
+
+        <button onclick="location.reload()">最初に戻る</button>
+        <button onclick="retryWrongQuiz()">間違えた問題だけ解き直す</button>
+    </div>
 
    
     <script src="main.js"></script>
