--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
         <button onclick="retryWrongQuiz()">間違えた問題だけ解き直す</button>
     </div>
 
+    <div id="feedback" style="display:none;">
+        <div id="feedback-symbol"></div>
+        <div id="feedback-text"></div>
+    </div>
+
    
     <script src="main.js"></script>
 </body>
