タイトル、ボタンの大きさ、背景

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>QuizJS</title>
 </head>
 <body>
+     <div id="titleScreen">
+    <img src="start.jpg" alt="スタート画面">
+  </div>
+<div id="background"></div>
+
     <div id="level-selection" class="card">
         <h1>レベルを選択してください</h1>
         <div class="choice">
